[gd_scene load_steps=25 format=3 uid="uid://d4mufsk5s6ksm"]

[ext_resource type="Script" path="res://game/player/base_player.gd" id="1_lm5hc"]
[ext_resource type="Resource" uid="uid://c8feqy48gw426" path="res://game/player/loadouts/default_loadout.tres" id="2_dv4ej"]
[ext_resource type="PackedScene" uid="uid://b7kuvqlnmagen" path="res://game/effects/block marker/block_marker.tscn" id="3_6qduw"]
[ext_resource type="PackedScene" uid="uid://bhvbs1jyh6255" path="res://game/effects/block break animation/block_break_animation.tscn" id="4_qiuqw"]
[ext_resource type="PackedScene" uid="uid://dcor34lsh3lfc" path="res://game/player/virtual_projectile_thrower.tscn" id="5_auas0"]
[ext_resource type="PackedScene" uid="uid://d1tn6k71bbasx" path="res://game/player/mine_raycast.tscn" id="6_2mh75"]
[ext_resource type="PackedScene" uid="uid://kp5ss4gudwu3" path="res://game/components/tile detector/tile_detector.tscn" id="7_oj8sg"]
[ext_resource type="PackedScene" uid="uid://b4uyq2o7u54dp" path="res://game/player/player_ui.tscn" id="8_6jpol"]
[ext_resource type="PackedScene" uid="uid://bdy43ueb6q1kq" path="res://game/components/damage system/health_component.tscn" id="8_ku2ig"]
[ext_resource type="PackedScene" uid="uid://vgl3mtr5d37f" path="res://game/components/debug component/debug_component.tscn" id="9_ypbfg"]
[ext_resource type="PackedScene" uid="uid://d3r0rply8mfj" path="res://game/components/damage system/hurtbox.tscn" id="11_1dyk4"]
[ext_resource type="PackedScene" uid="uid://ckqb12s3uef52" path="res://game/components/state machine/state_machine.tscn" id="12_7bify"]
[ext_resource type="Script" path="res://game/player/state machine/player_state_machine.gd" id="14_7l24f"]
[ext_resource type="Script" path="res://game/player/state machine/default_state.gd" id="14_urqh1"]
[ext_resource type="Script" path="res://game/player/state machine/mining_state.gd" id="15_ips6r"]
[ext_resource type="Script" path="res://game/player/state machine/item_using_state.gd" id="16_cekgf"]
[ext_resource type="Script" path="res://game/player/state machine/item_charging_state.gd" id="17_b3ibu"]
[ext_resource type="Script" path="res://game/player/crafting/crafting.gd" id="17_noi44"]
[ext_resource type="Script" path="res://game/player/state machine/dying_state.gd" id="18_xdhrf"]
[ext_resource type="Script" path="res://game/player/state machine/building_state.gd" id="20_r6xgo"]
[ext_resource type="Script" path="res://game/player/vehicle_logic.gd" id="21_n56ys"]
[ext_resource type="Script" path="res://game/player/state machine/fishing_state.gd" id="22_mwsqf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cp3om"]
size = Vector2(30, 60)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nwn3q"]
resource_local_to_scene = true
radius = 15.0
height = 75.0

[node name="Base Player" type="CharacterBody2D"]
z_index = 10
collision_layer = 2
collision_mask = 645
script = ExtResource("1_lm5hc")
loadout = ExtResource("2_dv4ej")
block_marker_scene = ExtResource("3_6qduw")
block_breaker_scene = ExtResource("4_qiuqw")
virtual_thrower_scene = ExtResource("5_auas0")
mine_raycast_scene = ExtResource("6_2mh75")

[node name="Body" type="Node2D" parent="."]

[node name="Interaction Area" type="Area2D" parent="Body"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Interaction Area"]
position = Vector2(20, 0)
shape = SubResource("RectangleShape2D_cp3om")
debug_color = Color(0.584314, 0.905882, 0.172549, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_nwn3q")

[node name="Low Tile Detector" parent="." instance=ExtResource("7_oj8sg")]
position = Vector2(0, 32)

[node name="Mid Tile Detector" parent="." instance=ExtResource("7_oj8sg")]
position = Vector2(0, -8)

[node name="Player UI" parent="." node_paths=PackedStringArray("health") instance=ExtResource("8_6jpol")]
health = NodePath("../Health Component")

[node name="Health Component" parent="." instance=ExtResource("8_ku2ig")]
regeneration_per_sec = 5.0

[node name="Debug Component" parent="." instance=ExtResource("9_ypbfg")]
max_detail_level = 1
prefix = "Player"

[node name="Hurt Box" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("11_1dyk4")]
health_component = NodePath("../Health Component")

[node name="Crafting" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("17_noi44")
player = NodePath("..")

[node name="Vehicle" type="Node" parent="."]
script = ExtResource("21_n56ys")

[node name="State Machine" parent="." node_paths=PackedStringArray("current_state") instance=ExtResource("12_7bify")]
script = ExtResource("14_7l24f")
current_state = NodePath("Default")
debug = true

[node name="Default" type="Node" parent="State Machine" node_paths=PackedStringArray("player")]
script = ExtResource("14_urqh1")
player = NodePath("../..")

[node name="Mining" type="Node" parent="State Machine" node_paths=PackedStringArray("player")]
script = ExtResource("15_ips6r")
player = NodePath("../..")

[node name="Sound Interval" type="Timer" parent="State Machine/Mining"]
wait_time = 0.7
one_shot = true

[node name="Item Using" type="Node" parent="State Machine" node_paths=PackedStringArray("player")]
script = ExtResource("16_cekgf")
player = NodePath("../..")

[node name="Item Charging" type="Node" parent="State Machine" node_paths=PackedStringArray("player")]
script = ExtResource("17_b3ibu")
player = NodePath("../..")

[node name="Dying" type="Node" parent="State Machine" node_paths=PackedStringArray("player")]
script = ExtResource("18_xdhrf")
player = NodePath("../..")

[node name="Building" type="Node" parent="State Machine" node_paths=PackedStringArray("player")]
script = ExtResource("20_r6xgo")
player = NodePath("../..")

[node name="Fishing" type="Node" parent="State Machine"]
script = ExtResource("22_mwsqf")

[node name="Coyote Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Jump Buffer Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="hotbar_slot_changed" from="Player UI" to="." method="_on_player_ui_hotbar_slot_changed"]
[connection signal="hotbar_slot_changed" from="Player UI" to="State Machine/Mining" method="_on_player_ui_hotbar_slot_changed"]
[connection signal="select_buildable" from="Player UI" to="State Machine" method="_on_player_ui_select_buildable"]
[connection signal="recipe_crafted" from="Crafting" to="." method="_on_crafting_recipe_crafted"]
[connection signal="exit_vehicle" from="Vehicle" to="State Machine" method="_on_exit_vehicle"]
[connection signal="charge_item" from="State Machine/Default" to="State Machine" method="_on_charge_item"]
[connection signal="start_mining" from="State Machine/Default" to="State Machine" method="_on_start_mining"]
[connection signal="use_item" from="State Machine/Default" to="State Machine" method="_on_use_item"]
[connection signal="stop_mining" from="State Machine/Mining" to="State Machine" method="_on_stop_mining"]
[connection signal="stop_using_item" from="State Machine/Item Using" to="State Machine" method="_on_stop_using_item"]
[connection signal="release_charge" from="State Machine/Item Charging" to="State Machine" method="release_charge"]
[connection signal="build_block" from="State Machine/Building" to="State Machine" method="_on_place_block"]
[connection signal="build_entity" from="State Machine/Building" to="State Machine" method="_on_building_build_entity"]
[connection signal="cancel_build" from="State Machine/Building" to="State Machine" method="_on_building_cancel"]
[connection signal="charge_item" from="State Machine/Fishing" to="State Machine" method="_on_charge_item"]
